--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Sign in</h1>
+<h1>Create an account</h1>
 
-<%= form_with url: session_url do |form| %>
+<%= form_with url: registration_url do |form| %>
   <div>
     <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address] %>
   </div>
@@ -9,5 +9,5 @@
     <%= form.password_field :password, required: true, autocomplete: "current-password", placeholder: "Enter your password", maxlength: 72 %>
   </div>
 
-  <%= form.submit "Sign in" %>
+  <%= form.submit "Sign up" %>
 <% end %>
