--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
   <body>
     <%= link_to 'Home', root_path %>
-    <%= link_to 'Dashboard', dashboard_path %>
+    <%= link_to "Dashboard", dashboard_path if Current.user %>
     <% if authenticated? %>
       <%#= Current.session %>
       <%= Current.user.email_address %>
