--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
+<div class="home-container">
+  <h1 class="welcome-message">Bem vindo ao ToDo 360º!</h1>
+  <div class="buttons-home">
+    <%= link_to 'Entrar', new_session_path, class: 'btn btn-primary' %>
+    <%= link_to 'Cadastre-se', new_registration_path, class: 'btn btn-secondary' %>
+  </div>
+</div>
