--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,13 +1,20 @@
-<h1>Create an account</h1>
+<div class="form-container">
+  <h1 class="form-title">Cadastre-se</h1>
 
-<%= form_with url: registration_url do |form| %>
-  <div>
-    <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address] %>
-  </div>
+  <%= form_with url: registration_url, class: "form" do |form| %>
+    <div class="form-group">
+      <%= form.label :email_address, "E-mail", class: "form-label" %>
+      <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Digite seu e-mail", value: params[:email_address], class: "form-input" %>
+    </div>
 
-  <div>
-    <%= form.password_field :password, required: true, autocomplete: "current-password", placeholder: "Enter your password", maxlength: 72 %>
-  </div>
+    <div class="form-group">
+      <%= form.label :password, "Senha", class: "form-label" %>
+      <%= form.password_field :password, required: true, autocomplete: "current-password", placeholder: "Digite sua senha", maxlength: 72, class: "form-input" %>
+    </div>
 
-  <%= form.submit "Sign up" %>
-<% end %>
+    <div class="form-actions">
+      <%= form.submit "Enviar", class: "btn-form btn-primary" %>
+    </div>
+  <% end %>
+</div>
+
