style: estrutura e estilizacao geral simples

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,9 @@
 <div class="home-container">
-  <h1 class="welcome-message">Bem vindo ao ToDo 360º!</h1>
-  <div class="buttons-home">
-    <%= link_to 'Entrar', new_session_path, class: 'btn btn-primary' %>
-    <%= link_to 'Cadastre-se', new_registration_path, class: 'btn btn-secondary' %>
+  <div>
+    <h1 class="welcome-message">Bem vindo ao ToDo 360º!</h1>
+    <div class="buttons-home">
+      <%= link_to 'Entrar', new_session_path, class: 'btn btn-primary' %>
+      <%= link_to 'Cadastre-se', new_registration_path, class: 'btn btn-secondary' %>
+    </div>
   </div>
 </div>
