--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,25 +1,49 @@
 <h1>Dashboard</h1>
 
-<%= link_to "New Task", new_task_path, class: "btn btn-primary" %>
+<%= link_to "New Task", new_task_path, class: "btn btn-success" %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.title %></td>
-        <td><%= task.description %></td>
-        <td>
-          <%= link_to "Edit", edit_task_path(task), class: "btn btn-warning" %>
-          <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
-        </td>
-      </tr>
+
+
+<div class="dashboard-container">
+  <div class="column">
+    <h2>Pendente</h2>
+    <% @tasks.where(status: 'Pendente').each do |task| %>
+      <div class="task-card">
+        <h3><%= task.title %></h3>
+        <p><%= task.description %></p>
+        <div class="task-actions">
+          <%= link_to "Editar", edit_task_path(task), class: "btn btn-warning" %>
+          <%# <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+
+  <div class="column">
+    <h2>Fazendo</h2>
+    <% @tasks.where(status: 'Fazendo').each do |task| %>
+      <div class="task-card">
+        <h3><%= task.title %></h3>
+        <p><%= task.description %></p>
+        <div class="task-actions">
+          <%= link_to "Editar", edit_task_path(task), class: "btn btn-warning" %>
+          <%# <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="column">
+    <h2>Feito</h2>
+    <% @tasks.where(status: 'Feito').each do |task| %>
+      <div class="task-card">
+        <h3><%= task.title %></h3>
+        <p><%= task.description %></p>
+        <div class="task-actions">
+          <%= link_to "Editar", edit_task_path(task), class: "btn btn-warning" %>
+          <%# <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
