--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,25 +1,42 @@
-<h1>Dashboard</h1>
 
-<%= link_to "New Task", new_task_path, class: "btn btn-primary" %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.title %></td>
-        <td><%= task.description %></td>
-        <td>
-          <%= link_to "Edit", edit_task_path(task), class: "btn btn-warning" %>
-          <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
+<div class="container-dashboard">
+  <div class="dashboard-header">
+    <h1 class="dashboard-title">Dashboard</h1>
+    <div class="action-buttons">
+      <%= link_to "Criar Nova Lista", new_list_path, class: "btn btn-create-list" %>
+      <%= link_to "Editar Listas", lists_path(@list), class: "btn btn-edit-list" %>
+    </div>
+  </div>
+</div>
+
+
+<div class="lists-container">
+  <% @lists.each do |list| %>
+    <div class="list-column">
+      <div class="list-header">
+        <h2 class="list-title"><%= list.title %></h2>
+        <%= link_to "+", new_list_task_path(list), class: "btn btn-add-task" %>
+      </div>
+
+      <ul class="task-list">
+        <% list.tasks.each do |task| %>
+          <li class="task-card">
+            <div class="task-title">
+              <strong><%= task.title %></strong>
+            </div>
+            <div class="task-description">
+              <%= task.description %>
+            </div>
+
+            <div class="task-actions">
+              <%= link_to 'Editar', edit_list_task_path(list_id: list.id, id: task.id), class: "task-btn-edit" %>
+              <%= button_to 'Excluir', list_task_path(list.id, task.id), method: :delete, class: "task-btn-delete" %>
+            </div>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+</div>
