--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= form_with url: registration_url, class: "form" do |form| %>
     <div class="form-group">
       <%= form.label :email_address, "E-mail", class: "form-label" %>
-      <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Digite seu e-mail", value: params[:email_address], class: "form-input" %>
+      <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Digite seu e-mail", class: "form-input" %>
     </div>
 
     <div class="form-group">
@@ -13,8 +13,7 @@
     </div>
 
     <div class="form-actions">
-      <%= form.submit "Enviar", class: "btn-form btn-primary" %>
+      <%= form.submit "Enviar", class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
-
