--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,12 +1,10 @@
-<% content_for :title, "Editing task" %>
+<% content_for :title, "Atualizar tarefa" %>
 
-<h1>Editing task</h1>
 
 <%= render "form", task: @task %>
 
 <br>
 
 <div>
-  <%= link_to "Show this task", @task %> |
-  <%= link_to "Back to tasks", tasks_path %>
+  <%= link_to "Voltar", dashboard_path %>
 </div>
