--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -14,6 +14,8 @@
 
     <div class="form-actions">
       <%= form.submit "Enviar", class: "btn btn-primary" %>
+      <%= link_to "Voltar", root_path , class: "btn btn-primary"%>
+
     </div>
   <% end %>
 </div>
